change title medium

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<a target="_blank" href="https://github.com/ThiryS"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/thiry_s"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/simon-thiry-b710ab132/"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
+			<a target="_blank" href="https://medium.com/"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org/thirys"><i class="fab fa-free-code-camp"></i></a>
     </div>
 	</main>
